fix: image overflowing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,7 +45,7 @@ main {
 
 .main-image {
   height: auto;
-  min-width: 100%;
+  max-width: 100%;
 }
 
 .details {
